# pointless-has

./: .gitignore  README.md  clash-help.txt  config.yaml  pointless-hs-exe  pointless-hs.cabal  primitives_doc.html  stack.yaml
.stack-work/install/x86_64-linux-ncurses6-nopie/lts-9.10/8.0.2/flag-cache/: mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  pointless-hs-0.1.0.0-8iO2EG1j5liLi38kiHEHJ8  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00
.stack-work/install/x86_64-linux-ncurses6-nopie/lts-9.10/8.0.2/lib/x86_64-linux-ghc-8.0.2/pointless-hs-0.1.0.0-8iO2EG1j5liLi38kiHEHJ8/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-ncurses6-nopie/lts-9.10/8.0.2/lib/x86_64-linux-ghc-8.0.2/pointless-hs-0.1.0.0-GwVh2N5kUKWGOs2l6I0wCu/: Interpreter.hi  Optimizer.dyn_hi  Parser.hi  Primitives.dyn_hi  Primitives.hi  StackManip.dyn_hi  StackManip.hi
.stack-work/install/x86_64-linux-ncurses6-nopie/lts-9.10/8.0.2/pkgdb/: package.cache  pointless-hs-0.1.0.0-GwVh2N5kUKWGOs2l6I0wCu.conf
app/: Main.hs
clash-compiler/clash-prelude/: stack.yaml
data/: debug.joy  obsolete.joy  test.joy
maybe-parser/: ChangeLog.md  README.md  maybe-parser.cabal  package.yaml
maybe-parser/app/: Main.hs
maybe-parser/src/: Parsing.hs
pointless/: clash-help.txt  pointless.cabal  stack.yaml
pointless/app/: Main.hs
pointless/cabal-helper0.8.0.0-Cabal2.0.0.2.build/: Main.hi
pointless/cabal-helper0.8.0.0-Cabal2.0.0.2.build/CabalHelper/Runtime/: Licenses.hi
pointless/cabal-helper0.8.0.0-Cabal2.0.0.2.build/CabalHelper/Shared/: Common.hi  InterfaceTypes.hi  Sandbox.hi
pointless/data/: pl-test.pless  test.pless
pointless/src/: Aaa.1.hs  Aaa.hs  Interpreter.hs  Parser.hs  Primitives.hs  Repl.hs  th.hs
pointless/test/: Spec.hs
pointless/trash/: Parser.hs  Spec.hs
src/: Aaa.hs  ClashTest.hs  Core.hs  CoreLibrary.hs  Interpreter.hs  NonHW.hs  Optimizer.hs  Parser.hs  PointlessParser.hs  Primitives.hs  Repl.hs  SocketServer.hs
src/js/: client.html  client.js  screen.css
test/: Spec.hs
trash/: Bbb.hs  ClashTest.hs  Interpreter.hs
