name:                pointless-hs
version:             0.1.0.0
synopsis:            pointless programming language
description:         see README.md
homepage:            https://github.com/roycrippen/pointless-hs#readme
license:             BSD3
license-file:        LICENSE
author:              roycrippen
maintainer:          roycrippen@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          data/*.joy

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter
                     , Parser
                     , Primitives
                     , SocketServer
                     , Repl
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , websockets
                     , tasty
                     , tasty-hunit
                     , aeson
                     , clash-prelude
  default-language:    Haskell2010

executable pointless-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , pointless-hs
                     , text
                     , websockets
                     , aeson
  default-language:    Haskell2010

test-suite pointless-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:      Interpreter
                     , Parser
                     , Primitives
                     , SocketServer
                     , Repl
  build-depends:       base
                     , containers
                     , text
                     , pointless-hs
                     , tasty
                     , tasty-hunit
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/roycrippen/pointless-hs
